--- a/css-grid-exercise-1/assets/css/style.css
+++ b/css-grid-exercise-1/assets/css/style.css
@@ -7,30 +7,46 @@ html {
     box-sizing: inherit;
   }
 
+
   main {
-    width: 960px;
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows: 100px, 200px, 100px;
+    grid-template-rows: 100px, auto, 100px;
     margin: auto;
+    grid-gap: 20px;
+    padding: 20px;
   }
   
   header.primary{
     background: rgba(0,0,0,.2);
-    grid-column: 1/12;
+    grid-column: 1/13;
+    grid-row: 1/2;
+  }
+
+  #content {
+    display: grid;
+    grid-column: 1/13;
+    grid-row: 2/3;
+    grid-template-columns: subgrid;
+    grid-template-rows: subgrid;
   }
 
   #blog {
     background: rgba(0,0,0,.2);
-    grid-column: 1/8;
+    grid-column: 1/9;
+    grid-row: 2/3;
   }
 
   aside {
     background: rgba(0,0,0,.2);
+    grid-column: 9/13;
+    grid-row: 2/3;
   }
 
   footer.primary {
-
+    background: rgba(0,0,0,.2);
+    grid-column: 1/13;
+    grid-row: 3/4;
   }
 
 
