--- a/css-grid-exercise-1/assets/css/style.css
+++ b/css-grid-exercise-1/assets/css/style.css
@@ -13,7 +13,7 @@ html {
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: 100px, auto, 100px;
     margin: auto;
-    grid-gap: 20px;
+    gap: 20px;
     padding: 20px;
   }
   
@@ -50,3 +50,14 @@ html {
   }
 
 
+/*-----Media Queries------*/
+
+@media screen and(min-width:401px) {
+  #content {
+    grid-template-columns: 1fr;
+  }
+
+/*retina specific --- https://goo.gl/Pgu6y */
+
+
+}
