--- a/starter-template/assets/css/style.css
+++ b/starter-template/assets/css/style.css
@@ -14,8 +14,15 @@
 html {
   color: #222;
   font-size: 1em;
-  line-height: 1.4;
+  line-height: 1.5;
+  box-sizing: border-box;
 }
+
+*,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
 
 /*
  * Remove text-shadow in selection highlight:
@@ -32,19 +39,6 @@ html {
 ::selection {
   background: #b3d4fc;
   text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
 }
 
 /*
