--- a/resume/assets/css/style.css
+++ b/resume/assets/css/style.css
@@ -52,7 +52,7 @@
 
   .subtitle {
     font-weight: 350;
-    font-size: 1.3em;
+    font-size: 1.5em;
   }
 
   main h2 {
@@ -102,9 +102,7 @@ nav {
 nav ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  padding: 20px 20px 0px 20px;
-  gap: 1em;;
-
+  padding: 20px 30px 0px 30px;
 }
 
 nav li {
@@ -133,7 +131,7 @@ nav a:hover {
 
 main.container {
   display: grid;
-  padding: 1em;
+  padding: 30px;
   background: var(--container-color);
   grid-template-areas: 
     "title"
@@ -360,12 +358,16 @@ footer a:link a:visited {
       "education education"
       "skills experience";
       gap: 2em;
+      margin-bottom: 60px;
     }
 
     #skills, #experience {
       border: none;
     }
 
+    nav ul {
+      gap: 1em;
+    }
 
     /* --nested grid-- */
 
