responsive img scrset demo, course home page bg img test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 header.primary {
-    color:
+    background-image: url(https://klmerritt44.github.io/mobile-web-3342/assets/img/bugs-eye-view.jpg);
 
 }
 
