--- a/hocotts/assets/css/style.css
+++ b/hocotts/assets/css/style.css
@@ -3,8 +3,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
+:root {
+  --body-text: #222;
+  --body-text-inverse: #e6e5e0;
+  --light-bg: #e6e5e0;
+  --dark-bg: #034001;
+  --dark-bg-opacity: rgba(2, 30, 1, 0.7);
+}
+
 html {
-  color: #222;
+  color: var(--body-text);
   font-size: 1em;
   line-height: 1.5;
   box-sizing: border-box;
@@ -20,10 +28,11 @@ html {
  body {
   font-family: 'open sans';
   font-size: 1rem;
-  background: #e6e5e0;
-  /*---design time constraints
-  width: 375px;
-  border: 1px solid; ----*/
+  background: var(--light-bg);
+  margin: 0px;
+  /*---design time constraints ----*/
+  width: 400px;
+  border: 1px solid; 
  }
 
  h1,h2,h3,h4 {
@@ -181,32 +190,8 @@ img {
 .nav-container {
   width: 95%;
   max-width: 1000px;
-  margin: 0 auto;
-}
-
-header {
-  background: #e6e5e0;
-  color: #EBEBD3;
-  padding: 1em 0;
-  position: relative;
-  background-image: url(https://klmerritt44.github.io/mobile-web-3342/hocotts/assets/includes/raised-garden-bed.jpg);
-}
-
-header::after {
-  content: '';
-  clear: both;
-  display: block;
-}
-
-header.primary h1 a {
-  background: url(../includes/logo.png) no-repeat;
-  display: block;
-  width: 300px;
-  height: 70px;
-  margin: 0px auto;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
+  margin: 0;
+  background: var(--light-bg);
 }
 
 .logo {
@@ -261,7 +246,7 @@ header.primary h1 a {
 .site-nav a:hover,
 .site-nav a:focus {
   background: #72A603;
-  color: #72A603;
+  color: #659204;
 }
 
 .site-nav--icon {
@@ -314,9 +299,91 @@ header.primary h1 a {
   transform: translateY(-3px) rotate(-90deg);
 }
 
+header {
+  background: #e6e5e0;
+  color: #EBEBD3;
+  padding: 1em 0;
+  position: relative;
+}
+
+header::after {
+  content: '';
+  clear: both;
+  display: block;
+}
+/*
+header.primary {
+  height: 50vh;
+}
+*/
+header.primary h1 a {
+  background: url(../includes/logo.png) no-repeat;
+  display: block;
+  width: 300px;
+  height: 90px;
+  margin: 0px auto;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+ #primary-hero {
+  background-image: url(https://klmerritt44.github.io/mobile-web-3342/hocotts/assets/includes/raised-garden-bed.jpg);
+  background: cover;
+  height: 40vh;
+  position: relative;
+}
+
+#cta {
+  background: var(--dark-bg-opacity);
+  color: var(--body-text-inverse);
+  padding: 1em;
+  position: absolute;
+  bottom: 20px;
+}
+
+#cta a {
+  color: var(--body-text-inverse);
+  text-decoration: none;
+  background: var(--dark-bg);
+  padding: 0.5em;
+}
+
+#cta a:hover {
+  
+  
+}
 
 
-/*--------------media queries-----------------------*/
+.grid {
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr;
+}
+
+.services .grid article a {
+  display: block;
+  font-size: .8em;
+}
+
+.services a.cta-button {
+  display: block;
+  padding: .5em;
+  background: var(--dark-bg);
+  margin: 10px auto;
+  width: 135px;
+  text-align: center;
+  text-decoration: none;
+  color: var(--body-text-inverse);
+}
+
+
+
+
+
+
+
+
+/*----------------------media queries-----------------------*/
 
 @media (min-width: 768px) {
   
@@ -340,7 +407,8 @@ header.primary h1 a {
   .site-nav a {
     padding: 0;
     margin-left: 3em;
-    color: #034001;
+    color: #042d03;
+    font-size: 1.2em;
   }
   
   .site-nav a:hover,
