--- a/hocotts/assets/css/style.css
+++ b/hocotts/assets/css/style.css
@@ -208,7 +208,7 @@ img {
 
 .site-nav {
   position: absolute;
-  top: 0%;
+  top: 40%;
   right: 0%;
   background: #034001;
   clip-path: circle(0px at top right);
@@ -349,10 +349,17 @@ header.primary h1 a {
   background: var(--dark-bg-opacity);
 }
 
+
 .grid {
   display: grid;
-  grid-template-columns: 1fr, 1fr, 1fr;
 }
+
+.grid.image-gallery {
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr;
+}
+
+
 
 .services .grid article a {
   display: block;
